# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-10-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add more usage of the enable/disable configure switches for
      programming language support

2014-10-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add logging metadata in a way that is lager-compatible
    * Remove the flood integration tests since the functionality is replaced
      and improved in the request_rate test
    * Add enable/disable configure switches for programming language support

2014-10-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve cowboy integration in cloudi_service_http_cowboy
    * Fix cloudi_service_filesystem byterange read bug

2014-10-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update nodefinder

2014-10-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes for Erlang 17.3 changes
    * Update pqueue

2014-09-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.3.3 (beta) released

2014-09-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlang_term
    * Add a script to update mimetypes based on file extensions and use it
      to provide the internal cloudi_core header file
    * Add cloudi_response_info:lookup_content_type/2 to avoid
      memory consumption
        * Use it in cloudi_service_http_cowboy and cloudi_service_http_elli
          to minimize connection process memory consumption
    * Update cloudi_service_api_requests to make the new URL paths provide
      string UUIDs so the output is more intuitive

2014-09-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow the service configuration option queue_limit to be 0
    * Add the missing queue_size cloudi_service_api types entries

2014-09-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlang_term
    * Fix rebar to have output during CT execution pauses so that Travis