@@ -10,9 +10,12 @@ endif
 if PYTHON_C_SUPPORT
     PYTHON_C_SUBDIR = echo environment websockets
 endif
-SUBDIRS = \
-    $(CXX_SUBDIR) $(PYTHON_SUBDIR) $(PYTHON_C_SUBDIR) \
-    http http_req messaging msg_size request_rate
+if INTEGRATION_TESTS
+    INTEGRATION_TESTS_SUBDIR = \
+	    $(CXX_SUBDIR) $(PYTHON_SUBDIR) $(PYTHON_C_SUBDIR) \
+		http http_req messaging msg_size request_rate
+endif
+SUBDIRS = $(INTEGRATION_TESTS_SUBDIR)
 
 install-exec-hook:
 	$(MKDIR_P) "$(DESTDIR)$(cloudi_prefix)/tests"
